--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="content-box">
 
   <h1>{{ page.title }}</h1>
-  <table>
+  <table class="info-table">
     <tr>
       <td>Published:</td>
       <td>&nbsp;{{ page.date | date: "%Y-%m-%d" }}</td>
