Fixed nginx navigation error

--- a/website/_includes/top-nav.html
+++ b/website/_includes/top-nav.html
@@ -1,5 +1,5 @@
 <nav>
-    <button class="home-button" type="button" onclick="goHome()">
+    <button class="home-button" type="button" onclick="">
       <a href="/">stylback.se</a>
     </button>
 
