Dark mode by default pending toggle fix

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html lang = "en-SE" data-theme="light">
+<html lang = "en-SE" data-theme="dark">
 
   <head>
     <meta charset="UTF-8">
