bugfixes, new colors, prod/dev env.

--- a/website/_includes/top-nav.html
+++ b/website/_includes/top-nav.html
@@ -3,13 +3,7 @@
       <a href="/">stylback.se</a>
     </button>
 
-    <!--
-    The dark/light mode toggle works, but creates flashing white artifacts in dark mode.
-    This is due to an issue with the loading of dark/light mode, where it seems that light mode is defaulted before immediately switching.
-    No reason to believe the reverse would also be true (dark mode by default would produce dark flashes in light mode).
-    More testing required.
-    <button class="theme-toggle" type="button" data-theme-toggle label="&#9788">
-    -->
+    <button class="theme-toggle" type="button" data-theme-toggle label=""></button>
       
     </button>
     
