Some docs, minor updates

--- a/website/_includes/footer.html
+++ b/website/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="footer-content">
 
-  <p>&#169; Jonas Stylbäck, 2024</p>
+  <a class="license-link" href="https://github.com/Stylback/stylback.se/blob/main/LICENSE.md">&#169; Jonas Stylbäck, 2024</a>
 
   <div class="footer-items">
     {% for item in site.data.foot %}
